--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -1,10 +1,14 @@
 /* Navigation
 --------------------------------------------- */
 @import "navigation/navigation";
+@import "navigation/footer";
 
 /* Posts and pages
 --------------------------------------------- */
 @import "content/posts-and-pages";
+@import "content/homepage";
+@import "content/aboutpage";
+@import "content/contactpage";
 
 /* Comments
 --------------------------------------------- */
