made changes to home page. icon section

--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -9,6 +9,7 @@
 @import "content/homepage";
 @import "content/aboutpage";
 @import "content/contactpage";
+@import "content/back-to-top-button";
 
 /* Comments
 --------------------------------------------- */
