--- a/sass/components/content/_homepage.scss
+++ b/sass/components/content/_homepage.scss
@@ -21,9 +21,12 @@ main{
     width: 33.33%;
     height: 200px;
     float: left;
-    text-align: center;
+    text-align: left;
     padding:35px 10px;
     /* border:1px solid #000 ; */
+    h2{
+        text-align: center;
+    }
     img{
         height: 400px !important;
     }
