--- a/style.css
+++ b/style.css
@@ -843,9 +843,12 @@ main {
   width: 33.33%;
   height: 200px;
   float: left;
-  text-align: center;
+  text-align: left;
   padding: 35px 10px;
   /* border:1px solid #000 ; */
+}
+.column h2 {
+  text-align: center;
 }
 .column img {
   height: 400px !important;
@@ -858,6 +861,48 @@ main {
 }
 
 /* This is the end of icon section  */
+.about-hero {
+  margin-left: 10px;
+}
+
+.wpcf7 input[type=text],
+.wpcf7 input[type=email],
+.wpcf7 input[type=tel],
+.wpcf7 input[type=submit] {
+  color: black;
+  width: 40%;
+  height: auto;
+  background-color: aqua;
+}
+
+label {
+  color: white;
+}
+
+.wpcf7 textarea {
+  width: 40%;
+  height: 60px;
+  background-color: pink;
+}
+
+.wpcf7 {
+  align-items: center;
+  text-align: center;
+  margin: 5%;
+}
+
+.contact-form {
+  border: 10px solid red;
+  border-radius: 50px;
+  margin-left: 10%;
+  width: 75%;
+  height: 700px;
+  align-items: center;
+}
+.contact-form h2 {
+  text-align: center;
+}
+
 /*This is the start of the back to top button  */
 .topButton {
   display: flex;
