--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -10,6 +10,7 @@
 @import "content/aboutpage";
 @import "content/contactpage";
 @import "content/back-to-top-button";
+@import "content/info-section";
 
 /* Comments
 --------------------------------------------- */
