--- a/sass/components/content/_aboutpage.scss
+++ b/sass/components/content/_aboutpage.scss
@@ -1,3 +1,34 @@
-.about-hero{
-    margin-left: 10px;
+// .aboutpage{
+//     display: flex;
+//     flex-direction: row;
+//     justify-content: space-between;
+//     // align-items: center;
+// }
+
+// .about-hero{
+//     border: 10px solid red;
+//     border-radius: 50px;
+//     margin-left: 20px;
+//     width: auto;
+//     max-width: 400px;
+//     background-color: pink;
+    
+// }
+
+.infoBox{
+    width: 50%;
+    height: 500px;
+    float: left;
+    text-align: center;
+    margin: 30px 0px;
+    /* border: 1px solid #000; */
+}
+.infoTextbox{
+    padding: 70px 50px;
+    line-height: 200%;
+}
+.info-section:after{
+    content: "";
+    display: table;
+    clear: both;
 }
