--- a/sass/components/content/_contactpage.scss
+++ b/sass/components/content/_contactpage.scss
@@ -4,20 +4,21 @@
 .wpcf7 input[type="submit"]
 {
     color: black;
-    width: 40%;
+    width: 50%;
     height: auto;
-    background-color: aqua;
+    background-color:brown ;
 }
 label{
     color: white;
 }
 
 .wpcf7 textarea {
-    width: 40%;
+    width: 50%;
     height: 60px;
     background-color: pink;
 }
 .wpcf7{
+    
     align-items: center;
     text-align: center;
     margin: 5%;
@@ -25,13 +26,12 @@ label{
 }
 
 .contact-form{
+    margin-top: 30px;
     border: 10px solid red;
     border-radius: 50px;
-    
-    margin-left: 10%;
-    width: 75%;
+    margin-left: 20%;
+    width: 60%;
     height:700px;
-    
     align-items: center;
     h2 {
         text-align: center;
