--- a/style.css
+++ b/style.css
@@ -630,12 +630,21 @@ textarea {
   position: sticky;
   top: 0;
   z-index: 1;
+  display: flex;
 }
 .site-header .site-branding {
   float: left;
   margin: 5px 15px;
   height: 100px;
   width: 150px;
+}
+.site-header .header-text {
+  font-family: "Dancing Script", cursive;
+  position: relative;
+  left: 25%;
+  width: 500px;
+  height: 100px;
+  color: black;
 }
 
 .main-navigation {
@@ -861,8 +870,24 @@ main {
 }
 
 /* This is the end of icon section  */
-.about-hero {
-  margin-left: 10px;
+.infoBox {
+  width: 50%;
+  height: 500px;
+  float: left;
+  text-align: center;
+  margin: 30px 0px;
+  /* border: 1px solid #000; */
+}
+
+.infoTextbox {
+  padding: 70px 50px;
+  line-height: 200%;
+}
+
+.info-section:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
 .wpcf7 input[type=text],
@@ -870,9 +895,9 @@ main {
 .wpcf7 input[type=tel],
 .wpcf7 input[type=submit] {
   color: black;
-  width: 40%;
+  width: 50%;
   height: auto;
-  background-color: aqua;
+  background-color: brown;
 }
 
 label {
@@ -880,7 +905,7 @@ label {
 }
 
 .wpcf7 textarea {
-  width: 40%;
+  width: 50%;
   height: 60px;
   background-color: pink;
 }
@@ -892,10 +917,11 @@ label {
 }
 
 .contact-form {
+  margin-top: 30px;
   border: 10px solid red;
   border-radius: 50px;
-  margin-left: 10%;
-  width: 75%;
+  margin-left: 20%;
+  width: 60%;
   height: 700px;
   align-items: center;
 }
@@ -932,6 +958,26 @@ label {
 }
 
 /* This is the end of the back to top button */
+.infoBox {
+  width: 50%;
+  height: 500px;
+  float: left;
+  text-align: center;
+  margin: 30px 0px;
+  /* border: 1px solid #000; */
+}
+
+.infoTextbox {
+  padding: 70px 50px;
+  line-height: 200%;
+}
+
+.info-section:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 /* Comments
 --------------------------------------------- */
 .comment-content a {
