--- a/sass/components/content/_aboutpage.scss
+++ b/sass/components/content/_aboutpage.scss
@@ -16,6 +16,7 @@
 // }
 
 .infoBox{
+    margin-top: 10px;
     width: 50%;
     height: 500px;
     float: left;
@@ -23,12 +24,17 @@
     margin: 30px 0px;
     /* border: 1px solid #000; */
 }
+
 .infoTextbox{
     padding: 70px 50px;
     line-height: 200%;
 }
+
 .info-section:after{
     content: "";
     display: table;
     clear: both;
+    
 }
+
+
