--- a/sass/components/content/_contactpage.scss
+++ b/sass/components/content/_contactpage.scss
@@ -5,11 +5,11 @@
 {
     color: black;
     width: 50%;
-    height: auto;
+    height: 60px;
     background-color:brown ;
 }
 label{
-    color: white;
+    color: black;
 }
 
 .wpcf7 textarea {
@@ -31,7 +31,7 @@ label{
     border-radius: 50px;
     margin-left: 20%;
     width: 60%;
-    height:700px;
+    height:auto;
     align-items: center;
     h2 {
         text-align: center;
