added images to homepage and about

--- a/sass/components/navigation/_navigation.scss
+++ b/sass/components/navigation/_navigation.scss
@@ -22,10 +22,10 @@
 	.header-text{
 		font-family: 'Dancing Script', cursive;
 		position: relative;
-		left: 25%;
+		left: 30%;
 		width:500px;
 		height: 100px;
-		color:black;
+		color: orangered;
 	}
 }
 .main-navigation {
