--- a/sass/components/content/_homepage.scss
+++ b/sass/components/content/_homepage.scss
@@ -7,11 +7,13 @@ main{
     background-position:left;
     background-color:black;
     color: orangered;
+    padding-top: 10px;
     img{
         float: right;
-        height: 300px;
+        height: 250px;
         width:auto;
         margin-top: -70px;
+        padding-right: 10px;
     }
  
 }
