fixed nav bar text, about page image and text .

--- a/sass/components/content/_back-to-top-button.scss
+++ b/sass/components/content/_back-to-top-button.scss
@@ -9,7 +9,7 @@
 }
 .topButton a{
     padding: 8px 15px;
-    background-color: #000;
+    background-color:rgba(0, 17, 255, 0.541); 
     border: 2px solid #000;
     border-radius: 50px;
     text-decoration: none;
