--- a/sass/components/content/_aboutpage.scss
+++ b/sass/components/content/_aboutpage.scss
@@ -24,7 +24,10 @@
     margin: 30px 0px;
     /* border: 1px solid #000; */
 }
-
+img{
+    border: 10px  solid gray;
+    border-radius: 25px;
+}
 .infoTextbox{
     padding: 70px 50px;
     line-height: 200%;
