--- a/sass/components/content/_contactpage.scss
+++ b/sass/components/content/_contactpage.scss
@@ -4,18 +4,20 @@
 .wpcf7 input[type="submit"]
 {
     color: black;
-    width: 50%;
+    width: 60%;
     height: 60px;
-    background-color:brown ;
+    background-color:whitesmoke ;
+    box-shadow: 10px 15px rgba(0, 0, 0, 0.479);
 }
 label{
     color: black;
 }
 
 .wpcf7 textarea {
-    width: 50%;
-    height: 60px;
-    background-color: pink;
+    width: 60%;
+    height: 100px;
+    background-color: whitesmoke;
+    box-shadow: 10px 15px rgba(0, 0, 0, 0.479);
 }
 .wpcf7{
     
@@ -27,12 +29,13 @@ label{
 
 .contact-form{
     margin-top: 30px;
-    border: 10px solid red;
+    // border: 30px solid red;
     border-radius: 50px;
-    margin-left: 20%;
-    width: 60%;
+    margin-left: 25%;
+    width: 50%;
     height:auto;
     align-items: center;
+    background-color: darkgray;
     h2 {
         text-align: center;
     }
