--- a/sass/components/navigation/_navigation.scss
+++ b/sass/components/navigation/_navigation.scss
@@ -5,7 +5,7 @@
 .site-header{
 	height: 100px;
     width: 100%;
-    background-color: #474194;
+    background-color: darkgray;
     position: sticky;
     top: 0;
     z-index: 1;
@@ -25,7 +25,7 @@
 		left: 30%;
 		width:500px;
 		height: 100px;
-		color: orangered;
+		color: black;
 	}
 }
 .main-navigation {
